# Origin

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  PROJECT_INIT.md  QUICKSTART.md  README.md  ROADMAP.md  TODO.md  justfile
adapters/: README.md
adapters/origin-adapter-common/: README.md
adapters/origin-figma/: README.md
adapters/origin-penpot/: README.md
adapters/origin-pixso/: README.md
adapters/origin-sketch/: README.md
crates/: README.md
crates/design-adapters/adapter-core/: Cargo.toml
crates/design-adapters/adapter-core/src/: ir.rs  lib.rs
crates/design-adapters/figma/: Cargo.toml
crates/design-adapters/figma/src/: lib.rs
crates/origin/: Cargo.toml
crates/origin-cache/: Cargo.toml
crates/origin-cache/src/: lib.rs
crates/origin-input/: Cargo.toml
crates/origin-input/src/: lib.rs
crates/origin-layout/: Cargo.toml
crates/origin-layout/src/: lib.rs
crates/origin-platform/: Cargo.toml
crates/origin-platform/src/: lib.rs
crates/origin-primitive/: Cargo.toml
crates/origin-primitive/src/: lib.rs
crates/origin-render/: Cargo.toml
crates/origin-render/src/: lib.rs
crates/origin-tag/: Cargo.toml
crates/origin-tag/src/: lib.rs
crates/origin-ui/: Cargo.toml
crates/origin-ui/src/: lib.rs
crates/origin/src/: lib.rs
docs/: DESIGN_ADAPTERS.md  GETTING_STARTED.md
scripts/: build-android.sh  build-ios.sh  build-web.sh
