[workspace]
resolver = "2"
members = [
    "crates/origin",
    "crates/origin-platform",
    "crates/origin-render",
    "crates/origin-cache",
    "crates/origin-primitive",
    "crates/origin-layout",
    "crates/origin-tag",
    "crates/origin-input",
    "crates/origin-ui",
    "crates/design-adapters/adapter-core",
    "crates/design-adapters/figma",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Origin Contributors"]
repository = "https://github.com/Genuineh/Origin"

[workspace.dependencies]
# Core dependencies
wgpu = "27.0"
winit = "0.30"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.29"
cosmic-text = "0.12"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
